# bandcamp_extract

./: .extract.py.swp  LICENSE  LICENSE.md  README.md  ]  extract.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: __init__.py  extract.py  lib.py
