[metadata]
name = Mopidy
version = 0.1.0
url = https://github.com/JonMontgo/bandcamp_extract
project_urls =
    Source = https://github.com/JonMontgo/bandcamp_extract
    Issues = https://github.com/JonMontgo/bandcamp_extract/issues
author = Jonathan Montgomery
author_email = jonathan.montgo@gmail.com
license = MIT License
license_file = LICENSE.md
description = Bandcamp Extract is a program intended to extract bandcamp album archives.
long_description = file: README.md


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    tornado >= 4.4
    click==8.0.1
    tinytag==1.5.0


[options.extras_require]
lint =
    flake8


